# test-tube

./: .gitignore  .travis.yml  404.html  Dockerfile  LICENSE  LICENSE.txt  README.md  docker-compose.yml  example.py  index.html  mkdocs.yml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  test.py  update.sh
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: index.md
docs/docs/: index.md
docs/experiment_tracking/: experiment.md
docs/hpc/: SlurmCluster.md
docs/hyperparameter_optimization/: HyperOptArgumentParser.md
examples/: hpc_cpu_example.py  pytorch_hpc_example.py  tensorflow_example.py
examples/saved_logs/example_test_tube_data/demo_test_0/version_0/: metrics.csv  (+1 more)
examples/talk/: experiment_integration.py  hopt_integration.py  hopt_integration_hpc.py
exp_src/: exp.py
experiment_tracking/experiment/: index.html
hpc/SlurmCluster/: index.html
hyperparameter_optimization/HyperOptArgumentParser/: index.html
log/: exp.py
mkdocs/: search_index.json
search/: search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
site/experiment_tracking/experiment/: index.html
site/hpc/SlurmCluster/: index.html
site/hyperparameter_optimization/HyperOptArgumentParser/: index.html
site/js/: jquery-2.1.1.min.js
site/mkdocs/: search_index.json
site/search/: mustache.min.js  search_index.json
test_tube/: __init__.py  argparse_hopt.py  exp.py  hpc.py  hyperopt.py  log.py
test_tube/hyper_opt_utils/: strategies.py
test_tube/tt_lib/: __init__.py  img_io.py
tests/: argparse_hopt_test.py  hpc_test.py  strategies_test.py
(+8 files in other folders)
