[metadata]
description-file = README.md

[yapf]
align_closing_bracket_with_visual_indent = True
# Put braces on their own line.
dedent_closing_brackets = True
split_before_closing_bracket = True
indent_width = 4
coalesce_brackets = True
allow_multiline_lambdas = True
join_multiple_lines = True
spaces_around_power_operator = False
column_limit = 100
